--- a/hello-greeter/pom.xml
+++ b/hello-greeter/pom.xml
@@ -19,8 +19,14 @@
   
   <dependencyManagement>
   	<dependencies>
-  	
+
   		<dependency>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-war-plugin</artifactId>
+    			<version>${version.war.plugin}</version>
+		 </dependency>
+  		
+ 		<dependency>
   			<groupId>org.eclipse.microprofile</groupId>
   			<artifactId>microprofile</artifactId>
   			<version>${version.microprofile}</version>
